# ai-bridge

./: README.md  pyproject.toml
docs/: CODEBASE_MAP.md
examples/: ORIGIN_MAP.md  SETUP.md  adapters.example.json
hooks/: ai-peers-context.mjs  codex-orchestrator-context.mjs
skills/agent-delegation/: SKILL.md
src/ai-peers/: README.md  cli.py  server.py  store.py
src/ai-peers/tests/: test_cli_and_mcp.py  test_peers_cli.py  test_store.py  test_store_extended.py
src/ai_dispatch/: __init__.py  adapters.py  cli.py  entrypoints.py  jobs.py  orchestrate.py  output.py  routing.py  setup_hooks.py  verify.py  worktree.py
src/ai_dispatch/tests/: test_cli.py  test_cli_contracts.py  test_cli_extended.py  test_cli_more.py  test_codex_permission_relay.py  test_orchestrate.py  test_routing.py  test_setup_hooks.py  test_verify_unit.py  test_wrapper_and_docs_contracts.py
src/ai_peers/: __init__.py  cli.py  server.py  store.py
src/ai_peers/tests/: test_cli_and_mcp.py  test_peers_cli.py  test_store.py  test_store_extended.py
