[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-bridge"
version = "0.1.0"
description = "Local multi-agent switchboard for coding agents and CLIs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp==1.27.0",
]

[project.scripts]
ai-dispatch = "ai_dispatch.entrypoints:dispatch_main"
ai-delegate = "ai_dispatch.entrypoints:delegate_main"
ai-peers = "ai_dispatch.entrypoints:peers_main"
ai-peers-mcp = "ai_dispatch.entrypoints:peers_server_main"
ai-bridge-setup-hooks = "ai_dispatch.entrypoints:setup_hooks_main"
codex-orchestrator = "ai_dispatch.entrypoints:codex_orchestrator_main"
agent-hard = "ai_dispatch.entrypoints:agent_hard_main"
opencode-easy = "ai_dispatch.entrypoints:opencode_easy_main"
claude-code-worker = "ai_dispatch.entrypoints:claude_code_worker_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["ai_dispatch", "ai_dispatch.*", "ai_peers", "ai_peers.*"]
